@@ -250,7 +250,7 @@ void DialogAlongLine::SetFirstPointId(const quint32 &value)
  */
 void DialogAlongLine::SetFormula(const QString &value)
 {
-    formula = qApp->TrVars()->FormulaToUser(value);
+    formula = qApp->TrVars()->FormulaToUser(value, qApp->Settings()->GetOsSeparator());
     // increase height if needed.
     if (formula.length() > 80)
     {
