@@ -356,9 +356,9 @@ void VToolArc::SetVisualization()
 
         const VTranslateVars *trVars = qApp->TrVars();
         visual->setPoint1Id(arc->GetCenter().id());
-        visual->setRadius(trVars->FormulaToUser(arc->GetFormulaRadius()));
-        visual->setF1(trVars->FormulaToUser(arc->GetFormulaF1()));
-        visual->setF2(trVars->FormulaToUser(arc->GetFormulaF2()));
+        visual->setRadius(trVars->FormulaToUser(arc->GetFormulaRadius(), qApp->Settings()->GetOsSeparator()));
+        visual->setF1(trVars->FormulaToUser(arc->GetFormulaF1(), qApp->Settings()->GetOsSeparator()));
+        visual->setF2(trVars->FormulaToUser(arc->GetFormulaF2(), qApp->Settings()->GetOsSeparator()));
         visual->RefreshGeometry();
     }
 }
