@@ -325,7 +325,7 @@ void VToolPointOfContact::SetVisualization()
         visual->setPoint1Id(firstPointId);
         visual->setLineP2Id(secondPointId);
         visual->setRadiusId(center);
-        visual->setRadius(qApp->TrVars()->FormulaToUser(arcRadius));
+        visual->setRadius(qApp->TrVars()->FormulaToUser(arcRadius, qApp->Settings()->GetOsSeparator()));
         visual->RefreshGeometry();
     }
 }
